<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context="com.mohitkishore.www.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textColor="@color/textColor"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@color/textColor"
                android:textSize="@dimen/question_text_size"/>

            <RadioGroup
                android:id="@+id/q1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/mars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_radio_button1"
                    android:textSize="@dimen/radio_button_text_size"
                    />

                <RadioButton
                    android:id="@+id/venus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_radio_button2"
                    android:textSize="@dimen/radio_button_text_size"
                    />

                <RadioButton
                    android:id="@+id/earth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_radio_button3"
                    android:textSize="@dimen/radio_button_text_size"
                    />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/viewColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textColor="@color/textColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textColor="@color/textColor"
                android:textSize="@dimen/question_text_size"/>

            <CheckBox
                android:id="@+id/checkbox_canada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_checkbox1"
                android:textSize="@dimen/check_box_text_size"/>

            <CheckBox
                android:id="@+id/checkbox_peru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_checkbox2"
                android:textSize="@dimen/check_box_text_size"/>

            <CheckBox
                android:id="@+id/checkbox_usa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_checkbox3"
                android:textSize="@dimen/check_box_text_size"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/viewColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textColor="@color/textColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textColor="@color/textColor"
                android:textSize="@dimen/question_text_size"/>

            <EditText
                android:id="@+id/canada_capital_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_answer"
                android:textSize="@dimen/answer_edit_text_text_size"

                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/viewColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textColor="@color/textColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textColor="@color/textColor"
                android:textSize="@dimen/question_text_size"/>

            <EditText
                android:id="@+id/us_states_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_answer"
                android:textSize="@dimen/answer_edit_text_text_size"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/viewColor"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>

</ScrollView>
